<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <!-- Icono Back -->
    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/back"
        android:contentDescription="@string/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <!-- Texto del nombre del usuario -->
    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_usuario"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/backIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- Imagen de perfil del usuario -->
    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/perfil"
        android:contentDescription="@string/profile_image"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/userNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Contenedor de campos de entrada de información del usuario -->
    <LinearLayout
        android:id="@+id/userInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/profileImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <!-- Título de Categoría -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <!-- Campo de entrada para Categoría -->
        <EditText
            android:id="@+id/categoriaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/categoria"/>

        <!-- Título de Disponibilidad -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disponibilidad"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"/>

        <!-- Campo de entrada para Disponibilidad -->
        <EditText
            android:id="@+id/disponibilidadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/disponibilidad"
            android:focusable="false"
            android:clickable="true"/>

        <!-- Título de Localidad -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localidad"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"/>

        <!-- Campo de entrada para Localidad -->
        <EditText
            android:id="@+id/localidadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/localidad"/>

        <!-- Título de Contacto -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"/>

        <!-- Campo de entrada para Contacto -->
        <EditText
            android:id="@+id/contactoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contacto"/>

    </LinearLayout>

    <!-- Barra de navegación inferior -->
    <LinearLayout
        android:id="@+id/bottomNavigationBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#000000"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Icono 1 (Home) -->
        <ImageView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:contentDescription="@string/home"/>

        <!-- Icono 2 (Mis Reservas) -->
        <ImageView
            android:id="@+id/mis_reservas"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/calendar"
            android:contentDescription="@string/mis_reservas"/>

        <!-- Icono 3 (Torneos) -->
        <ImageView
            android:id="@+id/torneo"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/torneo"
            android:contentDescription="@string/torneo"/>

        <!-- Icono 4 (Usuario) -->
        <ImageView
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/usuario"
            android:contentDescription="@string/usuario"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
