<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReservasActivity">

    <!-- Icono Back -->
    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/back"
        android:contentDescription="@string/back_icon"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <CalendarView
        android:id="@+id/calenderView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <!-- ListView turnos disponibles -->
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <!-- Barra de Navegación -->
    <LinearLayout
        android:id="@+id/bottomNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#000000"
        android:padding="8dp">

        <!-- Icono Home -->
        <ImageView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:contentDescription="@string/home"/>

        <!-- Icono Mis Reservas -->
        <ImageView
            android:id="@+id/mis_reservas"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/calendar"
            android:contentDescription="@string/mis_reservas"/>

        <!-- Icono Torneos -->
        <ImageView
            android:id="@+id/torneo"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/torneo"
            android:contentDescription="@string/torneo"/>

        <!-- Icono Usuario -->
        <ImageView
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/usuario"
            android:contentDescription="@string/usuario"/>

    </LinearLayout>

</LinearLayout>