<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TorneoDetailActivity">


    <!-- Icono Back -->
    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/back"
        android:contentDescription="@string/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>


    <!-- Título Torneo -->
    <TextView
        android:id="@+id/torneoTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="28sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/backIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"/>

    <!-- Imagen Torneo -->
    <ImageView
        android:id="@+id/torneoImage"
        android:layout_width="0dp"
        android:layout_height="270dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/torneoImage"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/torneoTitle"
        tools:ignore="ImageContrastCheck"/>

    <!-- Descripción Torneo -->
    <TextView
        android:id="@+id/torneoDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="#555555"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/torneoTitle"
        tools:ignore="VisualLintLongText" />


    <!-- Barra de navegación inferior -->
    <LinearLayout
        android:id="@+id/bottomNavigationBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#000000"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Icono 1 (Home) -->
        <ImageView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:contentDescription="@string/home"/>

        <!-- Icono 2 (Mis Reservas) -->
        <ImageView
            android:id="@+id/mis_reservas"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/calendar"
            android:contentDescription="@string/mis_reservas"/>

        <!-- Icono 3 (Torneos) -->
        <ImageView
            android:id="@+id/torneo"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/torneo"
            android:contentDescription="@string/torneo"/>

        <!-- Icono 4 (Usuario) -->
        <ImageView
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/usuario"
            android:contentDescription="@string/usuario"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>