<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TorneosActivity">


    <!-- Icono Back -->
    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/back"
        android:contentDescription="@string/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <!-- Título Torneos
    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:text="@string/torneo_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toEndOf="@id/backIcon"
        app:layout_constraintTop_toTopOf="@id/backIcon" /> -->


    <!-- Tarjeta 1 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/backIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card2"
        app:layout_constraintBottom_toTopOf="@+id/card3">

        <!-- Contenido de la tarjeta -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Imagen del producto -->
            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:contentDescription="@string/torneo_rosario"
                android:scaleType="centerCrop"
                android:src="@drawable/ros"
                tools:ignore="ImageContrastCheck" />

            <!-- Título del producto -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/torneo_rosario"
                android:textColor="#000000"
                android:textSize="18sp" />

            <!-- Icono "Más" -->
            <ImageView
                android:id="@+id/add_icon1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/add_icon"
                android:src="@drawable/add_icon" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Tarjeta 2 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/backIcon"
        app:layout_constraintStart_toEndOf="@+id/card1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/card4">

        <!-- Contenido de la tarjeta -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Imagen del producto -->
            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:contentDescription="@string/torneo_mendoza"
                android:scaleType="centerCrop"
                android:src="@drawable/mza"
                tools:ignore="ImageContrastCheck" />

            <!-- Título del producto -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/torneo_mendoza"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_marginTop="15dp"/>

            <!-- Icono "Más" -->
            <ImageView
                android:id="@+id/add_icon2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add_icon"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/add_icon"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Tarjeta 3 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card4"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationBar">

        <!-- Contenido de la tarjeta -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Imagen del producto -->
            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:contentDescription="@string/torneo_bsas"
                android:scaleType="centerCrop"
                android:src="@drawable/bsas"
                tools:ignore="ImageContrastCheck" />

            <!-- Título del producto -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/torneo_bsas"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>

            <!-- Icono "Más" -->
            <ImageView
                android:id="@+id/add_icon3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add_icon"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/add_icon"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Tarjeta 4 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/card2"
        app:layout_constraintStart_toEndOf="@+id/card3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationBar">

        <!-- Contenido de la tarjeta -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Imagen del producto -->
            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:contentDescription="@string/torneo_cordoba"
                android:scaleType="centerCrop"
                android:src="@drawable/cba"
                tools:ignore="ImageContrastCheck" />

            <!-- Título del producto -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/torneo_cordoba"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_marginTop="15dp"/>

            <!-- Icono "Más" -->
            <ImageView
                android:id="@+id/add_icon4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add_icon"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/add_icon"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!-- Barra de navegación inferior -->
    <LinearLayout
        android:id="@+id/bottomNavigationBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#000000"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Icono 1 (Home) -->
        <ImageView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:contentDescription="@string/home"/>

        <!-- Icono 2 (Mis Reservas) -->
        <ImageView
            android:id="@+id/mis_reservas"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/calendar"
            android:contentDescription="@string/mis_reservas"/>

        <!-- Icono 3 (Torneos) -->
        <ImageView
            android:id="@+id/torneo"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/torneo"
            android:contentDescription="@string/torneo"/>

        <!-- Icono 4 (Usuario) -->
        <ImageView
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/usuario"
            android:contentDescription="@string/usuario"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>